Atualização do nasa.ipynb e adição do .gitignore

--- a/nasa.ipynb
+++ b/nasa.ipynb
@@ -350,9 +350,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import requests\n",
     "\n",
-    "api_key = \"1lVYAKcMEw6Fabw8quxQDM2vcVMtMANvYP3uL7xN\"\n",
+    "api_key = os.getenv('NASA_API_KEY')\n",
     "\n",
     "url = \"https://api.nasa.gov/neo/rest/v1/feed\"\n",
     "\n",
